--- a/QiuBai/res/values/styles.xml
+++ b/QiuBai/res/values/styles.xml
@@ -16,5 +16,17 @@
     <style name="AppTheme" parent="AppBaseTheme">
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
+    
+    <style name="CustomWindowTitleBackground">
+        <item name="android:background">#565656</item>
+    </style>
+    
+    <!-- 自定义title 属性 -->
+    <style name="test" parent="android:Theme">
+        
+        <item name="android:windowTitleSize">45dp</item>
+        <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
+    </style>
+    
 
 </resources>
