--- a/QiuBai/res/values/styles.xml
+++ b/QiuBai/res/values/styles.xml
@@ -30,8 +30,8 @@
         <item name="android:background">#565656</item>
     </style>
     
-    <!-- 自定义title 属性 -->
-    <style name="test" parent="android:Theme">
+    <!-- 鑷畾涔夌殑MainTitleBarStyle -->
+    <style name="MainTitleBarStyle" parent="android:Theme">
         
         <item name="android:windowTitleSize">45dp</item>
         <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground1</item>
