--- a/QiuBai/res/values/styles.xml
+++ b/QiuBai/res/values/styles.xml
@@ -2,13 +2,13 @@
 
     <!--
         Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
+        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
     -->
     <style name="AppBaseTheme" parent="android:Theme.Light">
         <!--
             Theme customizations available in newer API levels can go in
             res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
+            backward-compatibility can go here.
         -->
     </style>
 
@@ -17,22 +17,23 @@
         <!-- All customizations that are NOT specific to a particular API-level can go here. -->
     </style>
 
-<style name="CustomWindowTitleBackground">
-         <item name="android:background">@drawable/detail_title_bar_bg</item>
+    <style name="CustomWindowTitleBackground">
+        <item name="android:background">@drawable/detail_title_bar_bg</item>
     </style>
-    
+
     <style name="TitleBarStyle" parent="android:Theme">
         <item name="android:windowTitleSize">45dp</item>
         <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground</item>
     </style>
 
-<style name="CustomWindowTitleBackground1">
-        <item name="android:background">#565656</item>
+    <style name="MainCustomWindowTitleBackground">
+        <item name="android:background">@drawable/main_title_bar_bg</item>
     </style>
-    
+
     <!-- 自定义的MainTitleBarStyle -->
     <style name="MainTitleBarStyle" parent="android:Theme">
-        
         <item name="android:windowTitleSize">45dp</item>
-        <item name="android:windowTitleBackgroundStyle">@style/CustomWindowTitleBackground1</item>
-    </style></resources>
+        <item name="android:windowTitleBackgroundStyle">@style/MainCustomWindowTitleBackground</item>
+    </style>
+
+</resources>
