--- a/QiuBai/res/layout/detail_title.xml
+++ b/QiuBai/res/layout/detail_title.xml
@@ -5,7 +5,7 @@
     >
     
     <RelativeLayout 
-        android:id="@+id/title_rel_left"
+        android:id="@+id/title_rel_left_back"
         android:layout_width="60dp"
         android:layout_height="45dp"
         android:layout_alignParentLeft="true"
@@ -31,8 +31,8 @@
         >
         
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="35dp"
+            android:layout_height="35dp"
             android:layout_centerInParent="true"
             android:src="@drawable/detail_title_action_bar"
             />
