--- a/QiuBai/res/layout/activity_detail.xml
+++ b/QiuBai/res/layout/activity_detail.xml
@@ -6,6 +6,7 @@
     android:orientation="vertical" >
 
     <ScrollView
+        android:id="@+id/detail_scroll_content"
         android:layout_width="match_parent"
         android:layout_height="match_parent" >
 
