--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -12,4 +12,5 @@
     <!-- detail activity -->
     <color name="detail_content_title_text_color">#000000</color>
     <color name="detail_content_text_color">#333333</color>
+    <color name="detail_action_content_text_color">#3F3F3F</color>
 </resources>
