--- a/QiuBai/res/values/styles.xml
+++ b/QiuBai/res/values/styles.xml
@@ -1,21 +1,9 @@
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <!--
-        Base application theme, dependent on API level. This theme is replaced
-        by AppBaseTheme from res/values-vXX/styles.xml on newer devices.
-    -->
-    <style name="AppBaseTheme" parent="android:Theme.Light">
-        <!--
-            Theme customizations available in newer API levels can go in
-            res/values-vXX/styles.xml, while customizations related to
-            backward-compatibility can go here.
-        -->
-    </style>
+    <style name="AppBaseTheme" parent="android:Theme.Light"></style>
 
     <!-- Application theme. -->
-    <style name="AppTheme" parent="AppBaseTheme">
-        <!-- All customizations that are NOT specific to a particular API-level can go here. -->
-    </style>
+    <style name="AppTheme" parent="AppBaseTheme"></style>
     
     <!-- DetailActivity -->
     <style name="DetailCustomWindowTitleBackground">
@@ -27,6 +15,24 @@
         <item name="android:windowTitleBackgroundStyle">@style/DetailCustomWindowTitleBackground</item>
     </style>
 
+    <style name="DetailActionDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item> 
+        <item name="android:windowBackground">@drawable/detail_action_bar_panel_bg</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>  
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+    
+    <!-- Comment Activity -->
+    <style name="CommentCustomWindowTitleBackground">
+        <item name="android:background">@drawable/detail_title_bar_bg</item>
+    </style>
+
+    <style name="CommentTitleBarStyle" parent="android:Theme">
+        <item name="android:windowTitleSize">45dp</item>
+        <item name="android:windowTitleBackgroundStyle">@style/CommentCustomWindowTitleBackground</item>
+    </style>
 
     <!-- Custom MainTitleBarStyle -->
     <style name="MainTitleBarStyle" parent="android:Theme">
