--- a/QiuBai/res/layout/comment_activity.xml
+++ b/QiuBai/res/layout/comment_activity.xml
@@ -1,10 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:background="@drawable/detail_bg"
+    android:background="@color/comment_activity_bg_color"
     >
-    
 
-</LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
+
+        <ListView
+            android:id="@+id/comment_listview"
+            android:layout_width="wrap_content"
+            android:layout_height="fill_parent"
+           	android:divider="@null"
+            >
+        </ListView>
+    </LinearLayout>
+    
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="vertical"
+        android:layout_alignParentBottom="true"
+        android:background="@drawable/comment_edit_bg"
+        >
+        <TextView 
+            android:layout_height="80dp"
+            android:layout_width="match_parent"
+            android:text="nihao"
+            />
+    </LinearLayout>
+
+</RelativeLayout>
