--- a/QiuBai/res/layout/fragment_hot_layout.xml
+++ b/QiuBai/res/layout/fragment_hot_layout.xml
@@ -18,7 +18,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
             android:padding="10dp"
-            android:text="这是联系人界面" 
+            android:text="这是热门界面" 
             android:textSize="20sp"/>
         
 
