--- a/QiuBai/res/layout/comment_activity.xml
+++ b/QiuBai/res/layout/comment_activity.xml
@@ -50,8 +50,8 @@
 
         <ListView
             android:id="@+id/comment_listview"
-            android:layout_width="wrap_content"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:divider="@null" >
         </ListView>
     </LinearLayout>
