--- a/QiuBai/res/values/colors.xml
+++ b/QiuBai/res/values/colors.xml
@@ -20,7 +20,10 @@
     
     <!-- comment activity -->
     <color name="comment_activity_bg_color">#F6F6F6</color>
-    <color name="comment_listivew_item_username_color">#1E88E5</color>
+    <color name="comment_listview_item_username_color">#1E88E5</color>
+    <color name="comment_listview_item_from_color">#999999</color>
+    <color name="comment_listview_item_time_color">#999999</color>
+    <color name="comment_listview_item_content_color">#333333</color>
     <color name="comment_rel_fd_bg_color">#FFFFFF</color>
     <color name="comment_edittext_text_color">#333333</color>
     <color name="comment_send_disable_text_color">#999999</color>
