--- a/QiuBai/res/layout/main_activity.xml
+++ b/QiuBai/res/layout/main_activity.xml
@@ -3,7 +3,7 @@
     android:layout_height="fill_parent"
     android:orientation="vertical" >
 
-    <LinearLayout
+  <!--   <LinearLayout
         android:id="@+id/lin_main_title"
         android:layout_width="match_parent"
         android:layout_height="40dp"
@@ -84,6 +84,31 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_weight="1" >
+    </FrameLayout>
+    
+     -->
+     
+     <include layout="@layout/main_title_bar"/>
+     
+     <com.viewpagerindicator.TabPageIndicator
+        android:id="@+id/main_indicator"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:background="@android:color/transparent" >
+    </com.viewpagerindicator.TabPageIndicator>
+    
+    
+     <FrameLayout
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1" >
+        
+        <android.support.v4.view.ViewPager
+        android:id="@+id/main_tab_viewpager"
+        android:layout_height="match_parent"
+        android:layout_width="match_parent"
+        />
     </FrameLayout>
 
 </LinearLayout>
