--- a/QiuBai/res/values/styles.xml
+++ b/QiuBai/res/values/styles.xml
@@ -5,6 +5,16 @@
     <!-- Application theme. -->
     <style name="AppTheme" parent="AppBaseTheme"></style>
     
+    <!-- Common -->
+    <style name="CommonActionDialog" parent="@android:style/Theme.Dialog">
+        <item name="android:windowFrame">@null</item>
+        <item name="android:windowNoTitle">true</item> 
+        <item name="android:windowBackground">@drawable/common_action_bar_panel_bg</item>
+        <item name="android:windowIsFloating">true</item>
+        <item name="android:windowContentOverlay">@null</item>  
+        <item name="android:backgroundDimEnabled">false</item>
+    </style>
+    
     <!-- DetailActivity -->
     <style name="DetailCustomWindowTitleBackground">
         <item name="android:background">@drawable/detail_title_bar_bg</item>
@@ -15,14 +25,7 @@
         <item name="android:windowTitleBackgroundStyle">@style/DetailCustomWindowTitleBackground</item>
     </style>
 
-    <style name="DetailActionDialog" parent="@android:style/Theme.Dialog">
-        <item name="android:windowFrame">@null</item>
-        <item name="android:windowNoTitle">true</item> 
-        <item name="android:windowBackground">@drawable/detail_action_bar_panel_bg</item>
-        <item name="android:windowIsFloating">true</item>
-        <item name="android:windowContentOverlay">@null</item>  
-        <item name="android:backgroundDimEnabled">false</item>
-    </style>
+   
     
     <!-- Comment Activity -->
     <style name="CommentCustomWindowTitleBackground">
