--- a/QiuBai/res/layout/comment_title.xml
+++ b/QiuBai/res/layout/comment_title.xml
@@ -9,7 +9,7 @@
         android:layout_width="60dp"
         android:layout_height="45dp"
         android:layout_alignParentLeft="true"
-        android:background="@drawable/detail_rel_bg" >
+        android:background="@drawable/common_layout_press_bg" >
 
         <ImageView
             android:layout_width="wrap_content"
