--- a/QiuBai/res/layout/detail_title.xml
+++ b/QiuBai/res/layout/detail_title.xml
@@ -9,7 +9,7 @@
         android:layout_width="60dp"
         android:layout_height="45dp"
         android:layout_alignParentLeft="true"
-        android:background="@drawable/detail_rel_bg"
+        android:background="@drawable/common_layout_press_bg"
         >
         
         <ImageView 
@@ -27,7 +27,7 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_alignParentRight="true"
-        android:background="@drawable/detail_rel_bg"
+        android:background="@drawable/common_layout_press_bg"
         >
         
         <ImageView
