--- a/QiuBai/res/layout/pt_title.xml
+++ b/QiuBai/res/layout/pt_title.xml
@@ -8,7 +8,7 @@
         android:layout_width="60dp"
         android:layout_height="45dp"
         android:layout_alignParentLeft="true"
-        android:background="@drawable/detail_rel_bg" >
+        android:background="@drawable/common_layout_press_bg" >
 
         <ImageView
             android:layout_width="wrap_content"
@@ -22,7 +22,7 @@
         android:layout_width="45dp"
         android:layout_height="45dp"
         android:layout_alignParentRight="true"
-        android:background="@drawable/detail_rel_bg" >
+        android:background="@drawable/common_layout_press_bg" >
 
         <ImageView
             android:layout_width="28dp"
