--- a/QiuBai/res/values/styles.xml
+++ b/QiuBai/res/values/styles.xml
@@ -25,8 +25,6 @@
         <item name="android:windowTitleBackgroundStyle">@style/DetailCustomWindowTitleBackground</item>
     </style>
 
-   
-    
     <!-- Comment Activity -->
     <style name="CommentCustomWindowTitleBackground">
         <item name="android:background">@drawable/detail_title_bar_bg</item>
@@ -35,6 +33,16 @@
     <style name="CommentTitleBarStyle" parent="android:Theme">
         <item name="android:windowTitleSize">45dp</item>
         <item name="android:windowTitleBackgroundStyle">@style/CommentCustomWindowTitleBackground</item>
+    </style>
+    
+    <!-- Login Activity -->
+    <style name="LoginWindowTitleBackground">
+        <item name="android:background">@color/login_title_bar_bg_color</item>
+    </style>
+    
+    <style name="LoginTitleBarStyle" parent="android:Theme">
+        <item name="android:windowTitleSize">45dp</item>
+        <item name="android:windowTitleBackgroundStyle">@style/LoginWindowTitleBackground</item>
     </style>
 
     <!-- Custom MainTitleBarStyle -->
