--- a/QiuBai/res/layout/fragment_character_detail.xml
+++ b/QiuBai/res/layout/fragment_character_detail.xml
@@ -2,6 +2,10 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
+    android:paddingLeft="5dp"
+    android:paddingRight="5dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
     android:background="@drawable/character_button_selected_bg" >
 
     <LinearLayout
@@ -19,11 +23,11 @@
             android:layout_height="wrap_content"
             android:layout_margin="5dp"
             android:gravity="left"
-            android:lineSpacingMultiplier="1.2"
+            android:lineSpacingMultiplier="1.5"
             android:maxLines="5"
             android:textColor="@color/fragment_character_black"
-            android:textSize="15sp"
-            android:textStyle="bold" />
+            android:textSize="17sp"
+             />
 
         <RelativeLayout
             android:layout_width="fill_parent"
