--- a/QiuBai/res/layout/fragment_picture_layout.xml
+++ b/QiuBai/res/layout/fragment_picture_layout.xml
@@ -1,28 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
- 
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    >
-
-    <LinearLayout
-        android:layout_width="wrap_content"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="fill_parent"
+    android:layout_height="fill_parent"
+    android:orientation="vertical" >
+    
+    <ListView 
+        android:id="@+id/listview_fragment_picture"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
-        android:layout_centerInParent="true" >
+        android:divider="@null"
+        android:dividerHeight="5dp"
+        ></ListView>
 
-       
-
-        <TextView
-            android:id="@+id/textView1"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_gravity="center_horizontal"
-            android:padding="10dp"
-            android:text="这是图片界面" 
-            android:textSize="20sp"/>
-        
-
-    </LinearLayout>
-
-</RelativeLayout>
+</LinearLayout>
