--- a/QiuBai/res/layout/login_activity.xml
+++ b/QiuBai/res/layout/login_activity.xml
@@ -6,6 +6,48 @@
     android:background="@color/login_bg_color"
     >
     
-    
+    <LinearLayout 
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:orientation="vertical"
+        android:layout_marginTop="15dp"
+        android:layout_marginLeft="10dp"
+        android:layout_marginRight="10dp"
+        android:background="@drawable/login_base_white_bg"
+        >
+        
+        <LinearLayout 
+            android:layout_width="match_parent"
+            android:layout_height="50dp"
+            android:orientation="horizontal"
+            >
+            <RelativeLayout 
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                >
+                <ImageView 
+                	android:layout_height="20dp"
+                	android:layout_width="20dp"
+                	android:layout_centerInParent="true"
+                	android:src="@drawable/login_account_username_icon"
+                />
+            </RelativeLayout>
+            
+            <EditText 
+                android:layout_height="wrap_content"
+                android:layout_width="match_parent"
+                android:singleLine="true"
+                android:background="@null"
+                android:hint="账号"
+                />
+            <ImageView 
+                android:layout_height="wrap_content"
+                android:layout_width="wrap_content"
+                android:src="@drawable/login_base_text_edit_delete"
+                />
+            
+        </LinearLayout>
+        
+    </LinearLayout>
 
 </LinearLayout>
