--- a/QiuBai/res/layout/comment_activity.xml
+++ b/QiuBai/res/layout/comment_activity.xml
@@ -2,7 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/comment_bg" >
+    android:background="@color/comment_activity_bg_color" >
 
     <RelativeLayout
         android:id="@+id/comment_lin_edit"
