--- a/QiuBai/res/layout/fragment_picture_layout.xml
+++ b/QiuBai/res/layout/fragment_picture_layout.xml
@@ -10,6 +10,9 @@
         android:layout_height="wrap_content"
         android:divider="@null"
         android:dividerHeight="5dp"
+        
+        android:cacheColorHint="@color/fragment_picture_transport"
+        android:listSelector="@color/fragment_picture_transport"
         ></ListView>
 
 </LinearLayout>
