--- a/QiuBai/res/layout/login_activity.xml
+++ b/QiuBai/res/layout/login_activity.xml
@@ -47,7 +47,7 @@
                     android:background="@null"
                     android:hint="账号"
                     android:singleLine="true"
-                    android:textColorHint="#CCCCCC"
+                    android:textColorHint="@color/login_tv_hint_color"
                     android:textSize="15sp" />
             </RelativeLayout>
 
@@ -103,7 +103,7 @@
                     android:hint="密码"
                     android:password="true"
                     android:singleLine="true"
-                    android:textColorHint="#CCCCCC"
+                    android:textColorHint="@color/login_tv_hint_color"
                     android:textSize="15sp" />
             </RelativeLayout>
 
@@ -139,7 +139,7 @@
                 android:layout_height="wrap_content"
                 android:layout_centerInParent="true"
                 android:text="登  录"
-                android:textColor="#CCCCCC"
+                android:textColor="@color/login_tv_login_color"
                 android:textSize="16sp" />
         </RelativeLayout>
     </LinearLayout>
@@ -156,7 +156,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="还可以选择以下方式登录"
-            android:textColor="#AAAAAA"
+            android:textColor="@color/login_tv_other_way_color"
             android:textSize="13sp" />
     </LinearLayout>
 
