--- a/QiuBai/res/layout/register_title.xml
+++ b/QiuBai/res/layout/register_title.xml
@@ -5,7 +5,7 @@
     >
     
     <RelativeLayout
-        android:id="@+id/login_title_back"
+        android:id="@+id/register_title_back"
         android:layout_width="60dp"
         android:layout_height="45dp"
         android:layout_alignParentLeft="true"
@@ -21,11 +21,11 @@
     <TextView 
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_toRightOf="@id/login_title_back"
+        android:layout_toRightOf="@id/register_title_back"
         android:layout_centerVertical="true"
         android:textSize="16sp"
-        android:textColor="@color/login_title_text_color"
-        android:text="登录"
+        android:textColor="@color/register_title_text_color"
+        android:text="用户注册"
         />
 
 </RelativeLayout>
