--- a/QiuBai/res/layout/register_title.xml
+++ b/QiuBai/res/layout/register_title.xml
@@ -25,7 +25,7 @@
         android:layout_centerVertical="true"
         android:textSize="16sp"
         android:textColor="@color/register_title_text_color"
-        android:text="用户注册"
+        android:text="注册"
         />
 
 </RelativeLayout>
