--- a/QiuBai/res/layout/fragment_character_layout.xml
+++ b/QiuBai/res/layout/fragment_character_layout.xml
@@ -2,7 +2,7 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-   	android:background="@drawable/character_bg"
+   	android:background="@color/fragment_picture_bg"
     android:orientation="vertical" >
  
     <ListView
@@ -10,8 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:divider="@null"
-        android:dividerHeight="5dp"
-        
+        android:dividerHeight="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="5dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="10dp"
         android:cacheColorHint="@color/fragment_picture_transport"
         android:listSelector="@color/fragment_picture_transport"
          >
