--- a/QiuBai/res/layout/fragment_picture_detail.xml
+++ b/QiuBai/res/layout/fragment_picture_detail.xml
@@ -7,7 +7,7 @@
     android:paddingTop="5dp"
     android:paddingBottom="5dp"
     android:orientation="vertical"
-    android:background="@drawable/character_button_selected_bg" >
+    android:background="@drawable/base_white_bg" >
     
     <ImageView
         android:id="@+id/fragment_picture_detail_img"
